--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 //FONTS
 // ici sont chargés les fonts
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 // TOOLS
 // mixins et fonctions utilisés globalement dans le SCSS (Sass)
@@ -28,3 +29,6 @@
 // C’est là que la majorité de notre travail a lieu.
 @import '../../node_modules/swiper/swiper-bundle';
 @import 'components/icons';
+@import 'components/header';
+@import 'components/hero';
+@import 'components/premiers_labo';
