--- a/src/styles/settings/colors.scss
+++ b/src/styles/settings/colors.scss
@@ -5,9 +5,10 @@
 :root {
     // Couleur de base
     --color-white: #fff;
+    --color-white-transparent: rgba(255, 255, 255, 0.5);
     --color-black: #000;
 
     // Couleurs du projet
-    --color-primary: tomato;
-    --color-bg-primary: #e2e2e2;
+    --color-primary: #f26419;
+    --color-bg-primary: #000000;
 }
