--- a/src/styles/settings/fonts.scss
+++ b/src/styles/settings/fonts.scss
@@ -3,8 +3,8 @@
    ========================================================================== */
 /// Font family
 :root {
-    --font-primary: 'Montserrat', sans-serif;
-    --font-secondary: 'Fira Code', monospace;
+    --font-primary: 'Work Sans', sans-serif;
+    --font-secondary: 'Montserrat', sans-serif;
 
     --font-size-content: #{typo(16px, 18px)};
 
