css de la section reactive et importation d'images

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,4 +32,6 @@
 @import 'components/header';
 @import 'components/hero';
 @import 'components/premiers_labo';
+@import 'components/cards';
 @import 'components/button';
+@import 'components/reactifs';
